@@ -1,7 +1,8 @@
 Version 0.0.8 (2017-02-nn)
-- Got rid of chroot workaround
+- Got rid of chroot workaround (Issue #2)
 - Added confirmation dialog before saving files
 - Changes to toolbar with extended editor settings
+- Editor settings saved when Save-dialog is shown
 
 Version 0.0.7 (2017-02-01)
 - Inserted elements are selected as visual feedback
